Fix floating arrow bug on mobile

--- a/map/src/app/globals.css
+++ b/map/src/app/globals.css
@@ -651,6 +651,7 @@ body {
   }
 
   .sidebar-toggle {
+    position: fixed;
     top: unset;
     left: 50%;
     transform: translateX(-50%);
